[build-system]
requires = ["setuptools>=80", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "brainmint"
dynamic = ["version"]
description = "Brain MRI synthesis, compression, modality translation, and evaluation toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Muhammad Nabi Yasinzai" }
]
keywords = [
  "MRI",
  "brain MRI",
  "neuroimaging",
  "medical imaging",
  "diffusion models",
  "synthetic data",
  "modality translation",
  "deep learning",
]

dependencies = [
  "einops>=0.7",
  "numpy>=1.24",
  "omegaconf>=2.3",
  "torch>=2.1",
  "monai>=1.3",
  "nibabel>=5.2",
  "hydra-core>=1.3",
]

[project.optional-dependencies]
external = [
  "huggingface-hub>=0.20",
]
io = [
  "pillow>=10",
]
medical = [
  "scipy>=1.11",
]

metrics = [
  "medmetric[monai]>=0.1.1",
  "tqdm>=4.66",
]
train = [
  "pytorch-lightning>=2.2",
  "tabulate>=0.9",
  "tensorboard>=2.15",
  "torchmetrics>=1.3",
]
dev = [
  "build>=1.2",
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.5",
  "twine>=5",
]
all = [
  "huggingface-hub>=0.20",
  "medmetric[monai]>=0.1.1",
  "pillow>=10",
  "pytorch-lightning>=2.2",
  "scipy>=1.11",
  "tabulate>=0.9",
  "tensorboard>=2.15",
  "torchmetrics>=1.3",
  "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/yasinzaii/brainmint"
Repository = "https://github.com/yasinzaii/brainmint"
Issues = "https://github.com/yasinzaii/brainmint/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["brainmint*"]

[tool.setuptools.package-data]
"brainmint" = ["py.typed"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
write_to = "brainmint/_version.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
